# aesrng

./: .travis.yml  Cargo.toml  README.md
benches/: fill.rs  rngs.rs
src/: lib.rs  simd.rs
